Fixed: "X" in note close button was not centered well

--- a/styles/note.css
+++ b/styles/note.css
@@ -18,7 +18,7 @@
 {
 	width: 5vh;
 	height: 5vh;
-	line-height: 5vh;
+	line-height: 5.25vh;
 	margin: 2vh auto 0 auto;
 
 	font-size: 3vh;
